# wasm-inject-data

./: Cargo.toml  LICENSE  README.md  output.wasm  test.sh
src/: inject.rs  lib.rs  static_wasm.rs
src/wasm_transform/: convert.rs
